--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -9,74 +10,34 @@
     android:paddingEnd="10dp"
     tools:context=".MainActivity">
 
-
     <TextView
         android:id="@+id/flashcard_question"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
         android:background="@drawable/card_background"
         android:elevation="5dp"
-        android:gravity="center"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:text="@string/question_44th_president"
         android:textColor="#FFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:gravity="center"
+        android:text="Qui est le 44ᵉ président des États-Unis ?"
         android:textSize="40sp"
-        tools:ignore="TextSizeCheck" />
-
-    <!-- <TextView
-        android:id="@+id/answer1"
-        android:layout_below="@id/flashcard_question"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="Bill Clinton"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#FFBB86FC"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:elevation="3dp"
-        android:padding="10dp" />
-
-    <TextView
-        android:id="@+id/answer2"
-        android:layout_below="@id/answer1"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="Georges H. W. Washington"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#FFBB86FC"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:elevation="3dp"
-        android:padding="10dp" />
-
-
-    <TextView
-        android:id="@+id/answer3"
-        android:layout_below="@id/answer2"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="Barack Obama"
-        android.layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#FFBB86FC"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:elevation="3dp"
-        android:padding="10dp" />
-        -->
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp" />
 
     <TextView
         android:id="@+id/flashcard_answer"
+        android:textColor="#000000"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/answer_background"
         android:gravity="center"
-        android:text="@string/answer_barack_obama"
-        android:textColor="#000000"
-        android:textSize="40sp"
-        android:visibility="invisible" />
+        android:text="Barack Obama"
+        android:visibility="invisible"
+        android:textSize="40sp" />
+
+
 
 </RelativeLayout>
